tests/unit-compatibility-test/fixtures/sonarqube/http-routes-default-values.yaml
---
# Source: sonarqube/templates/secret.yaml
---
apiVersion: v1
kind: Secret
metadata:
  name: http-routes-default-values.yaml-sonarqube-monitoring-passcode
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1002
    release: http-routes-default-values.yaml
    heritage: Helm
type: Opaque
data:
  SONAR_WEB_SYSTEMPASSCODE: "dGVzdA=="
---
# Source: sonarqube/templates/secret.yaml
---
apiVersion: v1
kind: Secret
metadata:
  name: http-routes-default-values.yaml-sonarqube-http-proxies
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1002
    release: http-routes-default-values.yaml
    heritage: Helm
type: Opaque
stringData:
  PLUGINS-HTTP-PROXY: ""
  PLUGINS-HTTPS-PROXY: ""
  PLUGINS-NO-PROXY: ""
  PROMETHEUS-EXPORTER-HTTP-PROXY: ""
  PROMETHEUS-EXPORTER-HTTPS-PROXY: ""
  PROMETHEUS-EXPORTER-NO-PROXY: ""
---
# Source: sonarqube/templates/config.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: http-routes-default-values.yaml-sonarqube-config
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1002
    release: http-routes-default-values.yaml
    heritage: Helm
data:
  sonar.properties: |
---
# Source: sonarqube/templates/init-sysctl.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: http-routes-default-values.yaml-sonarqube-init-sysctl
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1002
    release: http-routes-default-values.yaml
    heritage: Helm
data:
  init_sysctl.sh: |-
    set -o errexit
    set -o xtrace
    vmMaxMapCount=524288
    if [[ "$(sysctl -n vm.max_map_count)" -lt $vmMaxMapCount ]]; then
      sysctl -w vm.max_map_count=$vmMaxMapCount
      if [[ "$(sysctl -n vm.max_map_count)" -lt $vmMaxMapCount ]]; then
        echo "Failed to set initSysctl.vmMaxMapCount"; exit 1
      fi
    fi
    fsFileMax=131072
    if [[ "$(sysctl -n fs.file-max)" -lt $fsFileMax ]]; then
      sysctl -w fs.file-max=$fsFileMax
      if [[ "$(sysctl -n fs.file-max)" -lt $fsFileMax ]]; then
        echo "Failed to set initSysctl.fsFileMax"; exit 1
      fi
    fi
    nofile=131072
    if [[ "$(ulimit -n)" != "unlimited" ]]; then
      if [[ "$(ulimit -n)" -lt $nofile ]]; then
        ulimit -n $nofile
        if [[ "$(ulimit -n)" -lt $nofile ]]; then
          echo "Failed to set initSysctl.nofile"; exit 1
        fi
      fi
    fi
    nproc=8192
    if [[ "$(ulimit -u)" != "unlimited" ]]; then
      if [[ "$(ulimit -u)" -lt $nproc ]]; then
        ulimit -u $nproc
        if [[ "$(ulimit -u)" -lt $nproc ]]; then
          echo "Failed to set initSysctl.nproc"; exit 1
        fi
      fi
    fi
---
# Source: sonarqube/templates/install-plugins.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: http-routes-default-values.yaml-sonarqube-install-plugins
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1002
    release: http-routes-default-values.yaml
    heritage: Helm
data:
  install_plugins.sh: |-
---
# Source: sonarqube/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-routes-default-values.yaml-sonarqube
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1002
    release: http-routes-default-values.yaml
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: sonarqube
    release: http-routes-default-values.yaml
---
# Source: sonarqube/templates/sonarqube-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: http-routes-default-values.yaml-sonarqube
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1002
    release: http-routes-default-values.yaml
    heritage: Helm
    app.kubernetes.io/name: http-routes-default-values.yaml
    app.kubernetes.io/instance: http-routes-default-values.yaml
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: sonarqube
    app.kubernetes.io/component: http-routes-default-values.yaml-sonarqube
    app.kubernetes.io/version: "2026.5.2-enterprise"
spec:
  replicas: 1
  revisionHistoryLimit: 10
  serviceName: http-routes-default-values.yaml-sonarqube
  selector:
    matchLabels:
      app: sonarqube
      release: http-routes-default-values.yaml
  template:
    metadata:
      annotations:
        checksum/config: 8fa00d95fa1aff4c15fdae09e55fdf5e46926ee6245892190aaebe05b33b8b6f
        checksum/init-sysctl: b280ca14465e9322b1f861ca42521bad6eadb0acc0f667a0cbb7f72b8d153050
        checksum/plugins: f17f71491895884a5eea419631e77f47dc2b86f93faafb24c6cbd858a135eae5
        checksum/secret: 8c89ecd9b3b42950c9052230db7d75fac3a52872b274f87b7996893d382fd21e
      labels:
        app: sonarqube
        release: http-routes-default-values.yaml
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 0
      initContainers:
        - name: init-sysctl
          image: sonarqube:2026.5.2-enterprise
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
            readOnlyRootFilesystem: true
            runAsUser: 0
          command: ["/bin/bash", "-e", "/tmp/scripts/init_sysctl.sh"]
          volumeMounts:
            - name: init-sysctl
              mountPath: /tmp/scripts/
          env:
            - name: SONAR_WEB_CONTEXT
              value: /sonarqube/
            - name: SONAR_WEB_JAVAOPTS
              value: ""
            - name: SONAR_CE_JAVAOPTS
              value: ""
      containers:
        - name: sonarqube
          image: sonarqube:2026.5.2-enterprise
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
          resources:
            limits:
              cpu: 800m
              ephemeral-storage: 512000M
              memory: 10240M
            requests:
              cpu: 400m
              ephemeral-storage: 1536M
              memory: 4096M
          env:
            - name: SONAR_HELM_CHART_VERSION
              value: 2026.5.1002
            - name: SONAR_WEB_SYSTEMPASSCODE
              valueFrom:
                secretKeyRef:
                  name: http-routes-default-values.yaml-sonarqube-monitoring-passcode
                  key: SONAR_WEB_SYSTEMPASSCODE
            - name: SONAR_WEB_CONTEXT
              value: /sonarqube/
            - name: SONAR_WEB_JAVAOPTS
              value: ""
            - name: SONAR_CE_JAVAOPTS
              value: ""
          envFrom:
          livenessProbe:
            exec:
              command:
              - sh
              - -c
              - |
                curl --noproxy "*" -fsS -o /dev/null --max-time 5 -H "X-Sonar-Passcode: $SONAR_WEB_SYSTEMPASSCODE" "http://localhost:9000/sonarqube/api/system/liveness"
            failureThreshold: 6
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
              - sh
              - -c
              - |
                #!/bin/bash
                # A Sonarqube container is considered ready if the status is UP, DB_MIGRATION_NEEDED or DB_MIGRATION_RUNNING
                # status about migration are added to prevent the node to be kill while SonarQube is upgrading the database.
                if curl --noproxy "*" -s http://localhost:9000/sonarqube/api/system/status | grep -q -e '"status":"UP"' -e '"status":"DB_MIGRATION_NEEDED"' -e '"status":"DB_MIGRATION_RUNNING"'; then
                  exit 0
                fi
                exit 1
            failureThreshold: 6
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
          startupProbe:
            httpGet:
              scheme: HTTP
              path: /sonarqube/api/system/status
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 24
            timeoutSeconds: 1
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            runAsGroup: 0
            runAsNonRoot: true
            runAsUser: 1000
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /opt/sonarqube/data
              name: sonarqube
              subPath: data
            - mountPath: /opt/sonarqube/temp
              name: sonarqube
              subPath: temp
            - mountPath: /opt/sonarqube/logs
              name: sonarqube
              subPath: logs
            - mountPath: /tmp
              name: tmp-dir
            - mountPath: /opt/sonarqube/extensions
              name: sonarqube
              subPath: extensions
      serviceAccountName: default
      volumes:
        
        - name: init-sysctl
          configMap:
            name: http-routes-default-values.yaml-sonarqube-init-sysctl
            items:
              - key: init_sysctl.sh
                path: init_sysctl.sh
        - name: sonarqube
          emptyDir:
            {}
        - name : tmp-dir
          emptyDir:
            {}
---
# Source: sonarqube/templates/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-routes-default-values.yaml-sonarqube-http-route
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1002
    release: http-routes-default-values.yaml
    heritage: Helm
    custom: toto
spec:
  parentRefs:
  - name: my-gateway
  hostnames:
    - sonarqube.your-org.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /sonarqube/
    backendRefs:
    - name: http-routes-default-values.yaml-sonarqube
      port: 9000
---
# Source: sonarqube/templates/tests/sonarqube-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "http-routes-default-values.yaml-ui-test"
  annotations:
    "helm.sh/hook": test-success
    # Disable Istio sidecar injection for this test pod
    "sidecar.istio.io/inject": "false"
  labels:
    app: sonarqube
    chart: sonarqube-2026.5.1002
    release: http-routes-default-values.yaml
    heritage: Helm
spec:
  automountServiceAccountToken: false
  containers:
    - name: http-routes-default-values.yaml-ui-test
      image: "sonarqube:2026.5.2-enterprise"
      imagePullPolicy: IfNotPresent
      command: ['curl']
      args: [
        '--retry-connrefused',
        '--retry',
        '12',
        '--retry-delay',
        '1',
        '--max-time',
        '5',
        '-s',
        'http-routes-default-values.yaml-sonarqube:9000/api/system/status'
        ]
      resources:
        limits:
          cpu: 500m
          ephemeral-storage: 1000M
          memory: 200M
        requests:
          cpu: 500m
          ephemeral-storage: 100M
          memory: 200M
  restartPolicy: Never
